--- a/code/src/styles/settings.scss
+++ b/code/src/styles/settings.scss
@@ -4,7 +4,4 @@
  * Configures SASS variables and Vuetify overwrites
  */
 
-// https://next.vuetifyjs.com/features/sass-variables/`
-// @use 'vuetify' with (
-//   $color-pack: false
-// );
+$fotter-color: rgb(180, 195, 245);
